--- a/public/home.html
+++ b/public/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Flower Catalog</title>
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/homePage.css" />
   </head>
   <body>
     <h1>Flower Catalog</h1>
