--- a/public/home.html
+++ b/public/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Flower Catalog</title>
-    <link rel="stylesheet" href="css/homePage.css" />
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <h1>Flower Catalog</h1>
@@ -13,7 +13,7 @@
       <img id="flower" src="./pictures/freshorigins.jpg" alt="freshorigins" />
       <div>
         <div id="links">
-          <li><a href="#">Abeliophyllum</a></li>
+          <li><a href="abeliophyllum.html">Abeliophyllum</a></li>
           <li><a href="#">Ageratum</a></li>
         </div>
         <a href="#">Guest Book</a>
