--- a/public/abeliophyllum.html
+++ b/public/abeliophyllum.html
@@ -12,8 +12,8 @@
     <h1><a href="/"> <<</a> Abeliophyllum</h1>
     <div class="flowers-container">
       <img
+        class="flower"
         src="pictures/pbase-Abeliophyllum.jpg"
-        height="850px"
         alt="abeliophyllum.jpg"
       />
       <div class="content">
