--- a/public/home.html
+++ b/public/home.html
@@ -10,11 +10,15 @@
   <body>
     <h1>Flower Catalog</h1>
     <div class="flowers-container">
-      <img id="flower" src="./pictures/freshorigins.jpg" alt="freshorigins" />
+      <img
+        class="flower"
+        src="./pictures/freshorigins.jpg"
+        alt="freshorigins"
+      />
       <div>
         <div id="links">
           <li><a href="abeliophyllum.html">Abeliophyllum</a></li>
-          <li><a href="#">Ageratum</a></li>
+          <li><a href="agerantum.html">Ageratum</a></li>
         </div>
         <a href="#">Guest Book</a>
         <img
