--- a/public/agerantum.html
+++ b/public/agerantum.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <h1><a href="/"><<</a>Agerantum</h1>
+    <h1 class="header"><a href="/"><<</a>Agerantum</h1>
     <div class="flowers-container">
       <img
         class="flower"
