--- a/public/home.html
+++ b/public/home.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
-    <h1>Flower Catalog</h1>
+    <h1 class="header">Flower Catalog</h1>
     <div class="flowers-container">
       <img
         class="flower"
@@ -20,7 +20,7 @@
           <li><a href="abeliophyllum.html">Abeliophyllum</a></li>
           <li><a href="agerantum.html">Ageratum</a></li>
         </div>
-        <a href="#">Guest Book</a>
+        <a href="guestBook.html">Guest Book</a>
         <img
           src="./pictures/animated-flower-image-0021.gif"
           alt="watering-can.gif"
