--- a/public/abeliophyllum.html
+++ b/public/abeliophyllum.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <h1><a href="/"> <<</a> Abeliophyllum</h1>
+    <h1 class="header"><a href="/"> <<</a> Abeliophyllum</h1>
     <div class="flowers-container">
       <img
         class="flower"
