added saving comments and displaying comments

--- a/public/guestBook.html
+++ b/public/guestBook.html
@@ -21,12 +21,14 @@
     </div>
     <div id="comments-body">
       <table>
-        <thead class="table-columns">
+        <thead>
           <td>DATETIME</td>
           <td>NAME</td>
           <td>COMMENTS_LIST</td>
         </thead>
-        <tbody id="column-values"></tbody>
+        <tbody>
+          __COMMENTS__
+        </tbody>
       </table>
     </div>
   </body>
