--- a/public/home.html
+++ b/public/home.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Flower Catalog</title>
     <link rel="stylesheet" href="css/index.css" />
+    <script src="./js/hideWateringCan.js"></script>
   </head>
   <body>
     <h1 class="header">Flower Catalog</h1>
@@ -24,6 +25,8 @@
         <img
           src="./pictures/animated-flower-image-0021.gif"
           alt="watering-can.gif"
+          id="watering-can"
+          onclick="hideImage()"
         />
       </div>
     </div>
